tests/baselines/reference/expr.errors.txt
==== tests/cases/compiler/expr.ts (71 errors) ====
    interface I {
    }
    
    enum E {
        Red, Green, Blue
    }
    
    function f() {
        var a;
        var n=3;
        var s="";
        var b=false;
        var i:I;
        var e:E;
    
        n&&a;
        n&&s;
        n&&b;
        n&&i;
        n&&n;
        n&&e;
    
        s&&a;
        s&&n;
        s&&b;
        s&&i;
        s&&s;
        s&&e;
    
        a&&n;
        a&&s;
        a&&b;
        a&&i;
        a&&a;
        a&&e;
    
        i&&n;
        i&&s;
        i&&b;
        i&&a;
        i&&i;
        i&&e;
    
        e&&n;
        e&&s;
        e&&b;
        e&&a;
        e&&i;
        e&&e;
    
        n||a;
        n||s;
        n||b;
        n||i;
        n||n;
        n||e;
    
        s||a;
        s||n;
        s||b;
        s||i;
        s||s;
        s||e;
    
        a||n;
        a||s;
        a||b;
        a||i;
        a||a;
        a||e;
    
        i||n;
        i||s;
        i||b;
        i||a;
        i||i;
        i||e;
    
        e||n;
        e||s;
        e||b;
        e||a;
        e||i;
        e||e;
    
        n==a;
        n==s;
        ~~~~
!!! expr.ts(87,5): error TS2009: Operator '==' cannot be applied to types 'number' and 'string'.
        n==b;
        ~~~~
!!! expr.ts(88,5): error TS2009: Operator '==' cannot be applied to types 'number' and 'boolean'.
        n==i;
        n==n;
        n==e;
    
        s==a;
        s==n;
        ~~~~
!!! expr.ts(94,5): error TS2009: Operator '==' cannot be applied to types 'string' and 'number'.
        s==b;
        ~~~~
!!! expr.ts(95,5): error TS2009: Operator '==' cannot be applied to types 'string' and 'boolean'.
        s==i;
        s==s;
        s==e;
        ~~~~
!!! expr.ts(98,5): error TS2009: Operator '==' cannot be applied to types 'string' and 'E'.
    
        a==n;
        a==s;
        a==b;
        a==i;
        a==a;
        a==e;
    
        i==n;
        i==s;
        i==b;
        i==a;
        i==i;
        i==e;
        ~~~~
!!! expr.ts(112,5): error TS2009: Operator '==' cannot be applied to types 'I' and 'E'.
    
        e==n;
        e==s;
        ~~~~
!!! expr.ts(115,5): error TS2009: Operator '==' cannot be applied to types 'E' and 'string'.
        e==b;
        ~~~~
!!! expr.ts(116,5): error TS2009: Operator '==' cannot be applied to types 'E' and 'boolean'.
        e==a;
        e==i;
        ~~~~
!!! expr.ts(118,5): error TS2009: Operator '==' cannot be applied to types 'E' and 'I'.
        e==e;
    
        +i;
        +s;
        +n;
        +a;
        +b;
    
        -i;
        -s;
        -n;
        -a;
        -b;
    
        !i;
        !s;
        !n;
        !a;
        !b;
    
    
        n+a;
        n+s;
        n+b;
        ~
!!! expr.ts(142,5): error TS2111: Invalid '+' expression - types not known to support the addition operator.
        n+i;
        ~
!!! expr.ts(143,5): error TS2111: Invalid '+' expression - types not known to support the addition operator.
        n+n;
        n+e;
    
        s+a;
        s+n;
        s+b;
        s+i;
        s+s;
        s+e;
    
        a+n;
        a+s;
        a+b;
        a+i;
        a+a;
        a+e;
    
        i+n;
        ~
!!! expr.ts(161,5): error TS2111: Invalid '+' expression - types not known to support the addition operator.
        i+s;
        i+b;
        ~
!!! expr.ts(163,5): error TS2111: Invalid '+' expression - types not known to support the addition operator.
        i+a;
        i+i;
        ~
!!! expr.ts(165,5): error TS2111: Invalid '+' expression - types not known to support the addition operator.
        i+e;
        ~
!!! expr.ts(166,5): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    
        e+n;
        e+s;
        e+b;
        ~
!!! expr.ts(170,5): error TS2111: Invalid '+' expression - types not known to support the addition operator.
        e+a;
        e+i;
        ~
!!! expr.ts(172,5): error TS2111: Invalid '+' expression - types not known to support the addition operator.
        e+e;
    
        n^a;
        n^s;
          ~
!!! expr.ts(176,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        n^b;
          ~
!!! expr.ts(177,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        n^i;
          ~
!!! expr.ts(178,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        n^n;
        n^e;
    
        s^a;
        ~
!!! expr.ts(182,5): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        s^n;
        ~
!!! expr.ts(183,5): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        s^b;
        ~
!!! expr.ts(184,5): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~
!!! expr.ts(184,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        s^i;
        ~
!!! expr.ts(185,5): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~
!!! expr.ts(185,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        s^s;
        ~
!!! expr.ts(186,5): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~
!!! expr.ts(186,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        s^e;
        ~
!!! expr.ts(187,5): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
        a^n;
        a^s;
          ~
!!! expr.ts(190,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        a^b;
          ~
!!! expr.ts(191,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        a^i;
          ~
!!! expr.ts(192,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        a^a;
        a^e;
    
        i^n;
        ~
!!! expr.ts(196,5): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        i^s;
        ~
!!! expr.ts(197,5): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~
!!! expr.ts(197,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        i^b;
        ~
!!! expr.ts(198,5): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~
!!! expr.ts(198,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        i^a;
        ~
!!! expr.ts(199,5): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        i^i;
        ~
!!! expr.ts(200,5): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~
!!! expr.ts(200,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        i^e;
        ~
!!! expr.ts(201,5): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
        e^n;
        e^s;
          ~
!!! expr.ts(204,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        e^b;
          ~
!!! expr.ts(205,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        e^a;
        e^i;
          ~
!!! expr.ts(207,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        e^e;
    
        n-a;
        n-s;
          ~
!!! expr.ts(211,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        n-b;
          ~
!!! expr.ts(212,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        n-i;
          ~
!!! expr.ts(213,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        n-n;
        n-e;
    
        s-a;
        ~
!!! expr.ts(217,5): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        s-n;
        ~
!!! expr.ts(218,5): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        s-b;
        ~
!!! expr.ts(219,5): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~
!!! expr.ts(219,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        s-i;
        ~
!!! expr.ts(220,5): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~
!!! expr.ts(220,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        s-s;
        ~
!!! expr.ts(221,5): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~
!!! expr.ts(221,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        s-e;
        ~
!!! expr.ts(222,5): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
        a-n;
        a-s;
          ~
!!! expr.ts(225,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        a-b;
          ~
!!! expr.ts(226,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        a-i;
          ~
!!! expr.ts(227,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        a-a;
        a-e;
    
        i-n;
        ~
!!! expr.ts(231,5): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        i-s;
        ~
!!! expr.ts(232,5): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~
!!! expr.ts(232,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        i-b;
        ~
!!! expr.ts(233,5): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~
!!! expr.ts(233,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        i-a;
        ~
!!! expr.ts(234,5): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        i-i;
        ~
!!! expr.ts(235,5): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~
!!! expr.ts(235,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        i-e;
        ~
!!! expr.ts(236,5): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
        e-n;
        e-s;
          ~
!!! expr.ts(239,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        e-b;
          ~
!!! expr.ts(240,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        e-a;
        e-i;
          ~
!!! expr.ts(242,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        e-e;
    
    }